<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">\"Tretyakov Gallery\" Quiz</string>
    <string name="picture">Picture</string>
    <string name="wrong_answer_text">You gave the wrong answer.\nCorrect answer -&#160;</string>
    <string name="right">Correct</string>
    <string name="right_answer_text">You are absolutely right!</string>
    <string name="end">End</string>
    <string name="end_text">You answered all questions</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="intro_text">The Tretyakov Gallery is the main museum of Russian national art, reflecting its unique contribution to world culture. It is a hospitable museum that is known for its rich collection and variety of presented ideas.</string>
    <string name="counting_points">Counting points?</string>
    <string name="start_button">Start</string>
    <string name="see_results">How do you want to see the results?</string>
    <string name="on_screen">Show on screen</string>
    <string name="send_on_email">Send by e-mail</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="thank_you_for_attention"><xliff:g example="Natalia" id="name">%s</xliff:g>, thank you for attention!</string>
    <string name="text_result_on_screen">You answered <xliff:g example="2" id="score">%d</xliff:g> questions out of <xliff:g example="10" id="countOfQuestion">%d</xliff:g></string>
    <string name="title">Question <xliff:g example="2" id="step">%d</xliff:g>/<xliff:g example="10" id="countOfQuestion">%d</xliff:g></string>
    <string name="your_result">Your result</string>
    <string name="exit">Exit</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="result_email_subject">Results of the quiz \"Tretyakov Gallery\"</string>
    <string name="get_result_button">Get results</string>
    <string name="quit">Quit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Further</string>
    <string name="wrong">Incorrect</string>
    <string name="are_you_sure">How, already?</string>
    <string name="check">Check</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="question_1">This is a picture of Nikolai Shilder \"Temptation\". What was it significant for Tretyakov?</string>
    <string name="question_2">Before you, Vasily Surikov\'s famous painting \"The Morning of the Streltsy Execution\". In the depiction of events, the author made a historic mistake. Name it.</string>
    <string name="question_3">Once an illiterate shepherd boy in the field met a monk and complained to him that he was not given a letter. The monk took the prosphore from the chest, handed it to the boy, and offered to eat it. Having eaten the prosphora, the shepherd took possession of the letter, and the monk, having predicted his extraordinary destiny, disappeared. This meeting changed the boy\'s whole life. Who was this cowherd boy?</string>
    <string name="question_4">Name the author of the picture \"Noon. In the vicinity of Moscow\".</string>
    <string name="question_5">Before you the main facade of the Tretyakov Gallery, overlooking Lavrushinsky lane and executed in the Russian style. Perestroika was completed in 1904, after the death of P.M. Tretyakov. Who was the author of this sketch of the building?</string>
    <string name="question_6">In the spring of 1880 an unusual exhibition opened in St. Petersburg. To the building where it was located, crowds of people flocked. A long queue lined the door. And in the hall with the curtains on the windows, lit by electric lamps, there was one single picture. What was the name of this painting, who wrote it?</string>
    <string name="question_7">
        In the Tretyakov collection a significant place is occupied by paintings on everyday subjects. One of the artists wrote a detailed explanation of his painting in verse. Listen to the excerpt:\n\n
        \"Honest gentlemen,\n
        Come here!\n
        Welcome,\n
        We will not ask for money:\n
        For free,\n
        Just clean the glasses carefully.\n
        It begins,\n
        Begins\n
        About how people live on earth,\n
        How others chew at someone else\'s expense.\n
        Themselves work lazy,\n
        So the rich get married…\"\n\n
        Name the author of the poem. What kind of picture is it?
    </string>
    <string name="question_8">In what year was the beginning of the collection of P.V. Tretyakov?</string>
    <string name="question_8_answer">1856</string>
</resources>
