<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tretyakovgalleryquiz.fragment.ResultFragment">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:textSize="18sp"
        tools:text="Name" />

    <TextView
        android:id="@+id/show_result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text_view"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/see_results"
        android:textSize="18sp"
        android:visibility="gone"
        tools:visibility="visible" />

    <RadioGroup
        android:id="@+id/show_result_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_result_text_view"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <RadioButton
            android:id="@+id/on_screen_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_screen" />

        <RadioButton
            android:id="@+id/on_email_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/send_on_email" />
    </RadioGroup>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_result_radio_group"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        tools:visibility="visible" />

    <Button
        android:id="@+id/result_button"
        style="@style/MyButton"
        android:layout_above="@id/exit_button"
        android:layout_marginBottom="16dp"
        android:text="@string/get_result_button"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/exit_button"
        style="@style/MyButton"
        android:layout_alignParentBottom="true"
        android:text="@string/exit" />
</RelativeLayout>
