<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:resources="com.example.android.tretyakovgalleryquiz.fragment.QuestionWithRadioButtonFragment"
    tools:targetApi="m">

    <ImageView
        android:id="@+id/picture_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/picture"
        tools:src="@drawable/pic_1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:maxLines="100"
                android:padding="16dp"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                tools:text="@string/question_3" />

            <EditText
                android:id="@+id/question_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_text_view"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number" />

            <Button
                android:id="@+id/question_button"
                style="@style/MyButton"
                android:layout_below="@id/question_edit_text"
                android:text="@string/check"/>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
