<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:resources="com.example.android.tretyakovgalleryquiz.QuestionFragment">

    <!--TODO Добавить обрамление фигурной рамкой-->
    <ImageView
        android:id="@+id/picture_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/picture" />

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textColor="@color/secondary_text"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/answer_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="48dp"
        android:orientation="vertical"
        android:paddingRight="48dp">

        <RadioButton
            android:id="@+id/answer_1_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            tools:text="@string/question_1" />

        <RadioButton
            android:id="@+id/answer_2_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            tools:text="@string/question_2" />

        <RadioButton
            android:id="@+id/answer_3_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            tools:text="@string/question_1" />

        <RadioButton
            android:id="@+id/answer_4_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/secondary_text"
            android:textSize="14sp"
            tools:text="@string/question_2" />
    </RadioGroup>
</LinearLayout>
