<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:resources="com.example.android.tretyakovgalleryquiz.fragment.QuestionWithRadioButtonFragment"
    tools:targetApi="m">

    <ImageView
        android:id="@+id/picture_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/picture"
        tools:src="@drawable/pic_1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:maxLines="100"
                android:padding="16dp"
                android:textColor="@color/secondary_text"
                android:textSize="16sp"
                tools:text="@string/question_3" />

            <CheckBox
                android:id="@+id/answer_checkbox_1"
                style="@style/MyCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_text_view"
                android:theme="@style/MyCheckbox"
                tools:text="This young man is Peresvet, a participant of the Kulikovo battle" />

            <CheckBox
                android:id="@+id/answer_checkbox_2"
                style="@style/MyCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_checkbox_1"
                android:theme="@style/MyCheckbox"
                tools:text="This young man is Peresvet, a participant of the Kulikovo battle" />

            <CheckBox
                android:id="@+id/answer_checkbox_3"
                style="@style/MyCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_checkbox_2"
                android:theme="@style/MyCheckbox"
                tools:text="This young man is Peresvet, a participant of the Kulikovo battle" />

            <CheckBox
                android:id="@+id/answer_checkbox_4"
                style="@style/MyCheckbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/answer_checkbox_3"
                android:theme="@style/MyCheckbox"
                tools:text="This young man is Peresvet, a participant of the Kulikovo battle" />

            <Button
                android:id="@+id/check_button"
                style="@style/MyButton"
                android:layout_below="@id/answer_checkbox_4"
                android:layout_marginTop="32dp"
                android:text="@string/check" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
